--- a/dev/api/hyperspy.tests.component.html
+++ b/dev/api/hyperspy.tests.component.html
@@ -125,28 +125,28 @@
 </li>
 <li class="toctree-l3"><a class="reference internal" href="hyperspy.html#submodules">Submodules</a></li>
 <li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.Release">hyperspy.Release module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy._lazy_signals">hyperspy._lazy_signals module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.api">hyperspy.api module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.api_nogui">hyperspy.api_nogui module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.axes">hyperspy.axes module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.component">hyperspy.component module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.components1d">hyperspy.components1d module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.components2d">hyperspy.components2d module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-lazy-signals-module">hyperspy._lazy_signals module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-api-module">hyperspy.api module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-api-nogui-module">hyperspy.api_nogui module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-axes-module">hyperspy.axes module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-component-module">hyperspy.component module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-components1d-module">hyperspy.components1d module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-components2d-module">hyperspy.components2d module</a></li>
 <li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-conftest-module">hyperspy.conftest module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.decorators">hyperspy.decorators module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.defaults_parser">hyperspy.defaults_parser module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-decorators-module">hyperspy.decorators module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-defaults-parser-module">hyperspy.defaults_parser module</a></li>
 <li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.events">hyperspy.events module</a></li>
 <li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.exceptions">hyperspy.exceptions module</a></li>
 <li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.interactive">hyperspy.interactive module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.io">hyperspy.io module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-io-module">hyperspy.io module</a></li>
 <li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.logger">hyperspy.logger module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.model">hyperspy.model module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.roi">hyperspy.roi module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.samfire">hyperspy.samfire module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.signal">hyperspy.signal module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.signal_tools">hyperspy.signal_tools module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.signals">hyperspy.signals module</a></li>
-<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy.ui_registry">hyperspy.ui_registry module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-model-module">hyperspy.model module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-roi-module">hyperspy.roi module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-samfire-module">hyperspy.samfire module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-signal-module">hyperspy.signal module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-signal-tools-module">hyperspy.signal_tools module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-signals-module">hyperspy.signals module</a></li>
+<li class="toctree-l3"><a class="reference internal" href="hyperspy.html#hyperspy-ui-registry-module">hyperspy.ui_registry module</a></li>
 <li class="toctree-l3"><a class="reference internal" href="hyperspy.html#module-hyperspy">Module contents</a></li>
 </ul>
 </li>
@@ -230,119 +230,17 @@
 <div class="section" id="submodules">
 <h2>Submodules<a class="headerlink" href="#submodules" title="Permalink to this headline">¶</a></h2>
 </div>
-<div class="section" id="module-hyperspy.tests.component.test_component_active_array">
-<span id="hyperspy-tests-component-test-component-active-array-module"></span><h2>hyperspy.tests.component.test_component_active_array module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_active_array" title="Permalink to this headline">¶</a></h2>
-<dl class="class">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals">
-<em class="property">class </em><code class="descclassname">hyperspy.tests.component.test_component_active_array.</code><code class="descname">TestParametersAsSignals</code><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals" title="Permalink to this definition">¶</a></dt>
-<dd><p>Bases: <code class="xref py py-class docutils literal notranslate"><span class="pre">object</span></code></p>
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setup_method">
-<code class="descname">setup_method</code><span class="sig-paren">(</span><em>method</em><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setup_method" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active">
-<code class="descname">test_always_active</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive">
-<code class="descname">test_some_inactive</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_stash_array">
-<code class="descname">test_stash_array</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_stash_array" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-</dd></dl>
-
+<div class="section" id="hyperspy-tests-component-test-component-active-array-module">
+<h2>hyperspy.tests.component.test_component_active_array module<a class="headerlink" href="#hyperspy-tests-component-test-component-active-array-module" title="Permalink to this headline">¶</a></h2>
 </div>
-<div class="section" id="module-hyperspy.tests.component.test_component_set_parameters">
-<span id="hyperspy-tests-component-test-component-set-parameters-module"></span><h2>hyperspy.tests.component.test_component_set_parameters module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_set_parameters" title="Permalink to this headline">¶</a></h2>
-<dl class="class">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters">
-<em class="property">class </em><code class="descclassname">hyperspy.tests.component.test_component_set_parameters.</code><code class="descname">TestSetParameters</code><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters" title="Permalink to this definition">¶</a></dt>
-<dd><p>Bases: <code class="xref py py-class docutils literal notranslate"><span class="pre">object</span></code></p>
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setup_method">
-<code class="descname">setup_method</code><span class="sig-paren">(</span><em>method</em><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setup_method" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1">
-<code class="descname">test_set_parameters_free1</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2">
-<code class="descname">test_set_parameters_free2</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1">
-<code class="descname">test_set_parameters_not_free1</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2">
-<code class="descname">test_set_parameters_not_free2</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-</dd></dl>
-
+<div class="section" id="hyperspy-tests-component-test-component-set-parameters-module">
+<h2>hyperspy.tests.component.test_component_set_parameters module<a class="headerlink" href="#hyperspy-tests-component-test-component-set-parameters-module" title="Permalink to this headline">¶</a></h2>
 </div>
-<div class="section" id="module-hyperspy.tests.component.test_gaussianhf">
-<span id="hyperspy-tests-component-test-gaussianhf-module"></span><h2>hyperspy.tests.component.test_gaussianhf module<a class="headerlink" href="#module-hyperspy.tests.component.test_gaussianhf" title="Permalink to this headline">¶</a></h2>
-<dl class="function">
-<dt id="hyperspy.tests.component.test_gaussianhf.test_estimate_parameters_binned">
-<code class="descclassname">hyperspy.tests.component.test_gaussianhf.</code><code class="descname">test_estimate_parameters_binned</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_gaussianhf.test_estimate_parameters_binned" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="function">
-<dt id="hyperspy.tests.component.test_gaussianhf.test_function">
-<code class="descclassname">hyperspy.tests.component.test_gaussianhf.</code><code class="descname">test_function</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_gaussianhf.test_function" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="function">
-<dt id="hyperspy.tests.component.test_gaussianhf.test_integral_as_signal">
-<code class="descclassname">hyperspy.tests.component.test_gaussianhf.</code><code class="descname">test_integral_as_signal</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_gaussianhf.test_integral_as_signal" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="function">
-<dt id="hyperspy.tests.component.test_gaussianhf.test_util_fwhm_get">
-<code class="descclassname">hyperspy.tests.component.test_gaussianhf.</code><code class="descname">test_util_fwhm_get</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_gaussianhf.test_util_fwhm_get" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="function">
-<dt id="hyperspy.tests.component.test_gaussianhf.test_util_fwhm_getset">
-<code class="descclassname">hyperspy.tests.component.test_gaussianhf.</code><code class="descname">test_util_fwhm_getset</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_gaussianhf.test_util_fwhm_getset" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="function">
-<dt id="hyperspy.tests.component.test_gaussianhf.test_util_fwhm_set">
-<code class="descclassname">hyperspy.tests.component.test_gaussianhf.</code><code class="descname">test_util_fwhm_set</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_gaussianhf.test_util_fwhm_set" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="function">
-<dt id="hyperspy.tests.component.test_gaussianhf.test_util_sigma_get">
-<code class="descclassname">hyperspy.tests.component.test_gaussianhf.</code><code class="descname">test_util_sigma_get</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_gaussianhf.test_util_sigma_get" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="function">
-<dt id="hyperspy.tests.component.test_gaussianhf.test_util_sigma_getset">
-<code class="descclassname">hyperspy.tests.component.test_gaussianhf.</code><code class="descname">test_util_sigma_getset</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_gaussianhf.test_util_sigma_getset" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="function">
-<dt id="hyperspy.tests.component.test_gaussianhf.test_util_sigma_set">
-<code class="descclassname">hyperspy.tests.component.test_gaussianhf.</code><code class="descname">test_util_sigma_set</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_gaussianhf.test_util_sigma_set" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
+<div class="section" id="hyperspy-tests-component-test-gaussianhf-module">
+<h2>hyperspy.tests.component.test_gaussianhf module<a class="headerlink" href="#hyperspy-tests-component-test-gaussianhf-module" title="Permalink to this headline">¶</a></h2>
 </div>
-<div class="section" id="module-hyperspy.tests.component">
-<span id="module-contents"></span><h2>Module contents<a class="headerlink" href="#module-hyperspy.tests.component" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="module-contents">
+<h2>Module contents<a class="headerlink" href="#module-contents" title="Permalink to this headline">¶</a></h2>
 </div>
 </div>
 
